--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  /* background-color: #0f0f0f; */
+  /* color: white; */
+  overflow-x: hidden;
+}
+.container-fluid{
+  width: 100%;
+}
+.tac{
+  text-align: center;
+}
+.f-h-w{
+  height: 100%;
+  width: 100%;
+}
+.marginauto{
+  margin: auto;
 }
